# socrates

./: pyproject.toml
app/: main.py
app/agents/: evaluation_agent.py  filed_description_agent.py
app/agents/prompts/: describe_professional_field.yaml  evaluation_system_prompt.yaml  hint_prompts.yaml  persona_system_prompt.yaml  star_method_prompt.yaml
app/agents/tools/: extract_action.py  extract_result.py  extract_situation.py  extract_task.py
app/api/: field_description.py  interview.py
app/frontend/: index.html  interview.html  profession.html  select-candidate.html  style.css
app/frontend/static/: style.css
app/model/: ttt.py
